# collosco-py

./: README.md  bruh.py  pyproject.toml  test.py
Colloscope/: Classeur1.xlsx  Colloscope.py  EDT profs.csv  colloscope-Feuille-1.csv
assets/: EDT_teachers.csv  ROTATIONS 2023-2023_V3_originale.xlsx  ROTATIONS-TP-TD-2023-2024-V3.xlsx  ROTATIONS-TP-TD-2023-2024-V3_1.csv  colloscope-Feuille-1.csv  groupe_trinomes.csv  rotation_alex.csv  test (1).xslx
collosco-py/: Colloscope.py
collosco-py/data_classes/: __init__.py  student.py  teacher.py  trinome.py  trinomes.py  unavailable_time.py  week_schedule.py  working_hour.py
collosco-py/factories/: trinomes_factory.py
collosco_py/: Colloscope.py  consts.py  fill_weeks_schedule.py  main.py  types.py
collosco_py/data_classes/: __init__.py  exam.py  exam_types.py  kholle.py  pratical_work.py  slot.py  teacher.py  trinome.py  unavailable_time.py  week_schedule.py  working_hour.py
collosco_py/data_objects/: __init__.py  exam_types.py  group_objects.py
collosco_py/factories/: check_availability.py  extract_schedule.py  fill_weeks_schedule.py  teachers_factory.py  teachers_schedule_factory.py  trinomes_factory.py
